@@ -45,8 +45,15 @@ jobs:
       - name: configure
         run: |
           cd _build
-          ../configure --enable-cobc-internal-checks --enable-debug --prefix /opt/cobol/gnucobol-gcos --exec-prefix /opt/cobol/gnucobol-gcos
+          ../configure --enable-cobc-internal-checks --enable-debug --prefix /opt/cobol/gnucobol-gcos
         shell: msys2 {0}
+
+      - name: Upload config.log
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: windows-config-log
+          path: _build/config.log
 
       - name: make
         run: |
@@ -56,9 +63,16 @@ jobs:
 
       - name: check
         run: |
-          cd _build
+          cd _build/tests
           make check TESTSUITEFLAGS="--jobs=$(($(nproc)+1))"
         shell: msys2 {0}
+
+      - name: Upload testsuite directory
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: windows-testsuite-log
+          path: _build/tests/testsuite.log
 
       - name: install
         run: |
